cmake_minimum_required(VERSION 3.9)
project(cmpsc122_1_week7)

set(CMAKE_CXX_STANDARD 11)

add_executable(cmpsc122_1_week7 main.cpp IntNode.h IntNode.cpp Node.h Node.cpp SLList.h SLList.cpp DLNode.h DLNode.cpp DLList.h DLList.cpp Queue.h Queue.cpp Stack.h Stack.cpp ArrayStack.h ArrayStack.cpp ArrayQueue.h ArrayQueue.cpp)